compile_server/temp/1690588229215_35.compile_error
./temp/1690588229215_35.cpp: In member function ‘bool Solution::isPalindrome(int)’:
./temp/1690588229215_35.cpp:19:15: error: ‘n’ was not declared in this scope
     return m==n;
               ^
